# ClaudeOffice

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-26-agent-office-implementation.md
docs/superpowers/specs/: 2026-05-26-agent-office-design.md
src/agent_office/: __init__.py  models.py  projector.py  server.py  storage.py
src/agent_office/collector/: __init__.py  client.py  runner.py  usage_accounting.py
src/agent_office/collector/adapters/: base.py  claude_code.py  codex.py  fake.py  files.py  hermes.py  usage.py
src/agent_office/web/: app.js  index.html  styles.css
src/agent_office/web/assets/office/: manifest.json
src/agent_office/web/assets/office-scene-v2/: scene-manifest.json
tests/: test_collector.py  test_models.py  test_projector.py  test_readme_commands.py  test_runtime_adapters.py  test_server.py  test_storage.py  test_web_assets.py
