[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-office"
version = "0.1.0"
description = "Operations console for Codex, Claude Code, and Hermes agents"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.34,<0.35",
  "pydantic>=2.10,<3",
  "httpx>=0.28,<0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<0.26",
]

[project.scripts]
agent-office-server = "agent_office.server:main"
agent-office-collector = "agent_office.collector.runner:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
